# cv_automation_server

./: README.md  cv_automation_models.py  main.py  pyproject.toml
public/: _cvl_template.docx  cv_template.docx  cvl_template.docx
