[project]
name = "cv-automation-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit[pdf]>=1.49.1",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.20",
    "docxtpl>=0.20.1",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.116.1",
    "mangum>=0.19.0",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",

]
